# rotary-motor-control-simulation

./: .gitignore  01-MotorModel.ipynb  02-SpeedController.ipynb  03-PositionController.ipynb  05-CppModelTest.ipynb  06-CppControlTest.ipynb  README.md  plotutils.py
cpp/: Encoder.cpp  Encoder.hpp  IMotor.hpp  README.md  RotaryMotor.cpp  RotaryMotor.hpp  main.cpp
cpp/motor_controller/: CMakeLists.txt  MotorControl.cpp  MotorControl.h  main.cpp
cpp/motor_model/: CMakeLists.txt  IMotor.hpp  RotaryMotor.cpp  RotaryMotor.hpp
reference/: MotorControl.ipynb  MotorControl2.ipynb
src/motorcontrol/: encoder.py  filters.py  position_controller.py  position_controller.py.old  rotary_motor.py  speed_controller.py
